Align cart/order/product APIs with frontend real-backend contracts